# DiscordChannelCloner

./: .editorconfig  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  dockerfile  install-deps.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-local-image.yml  publish-image.yml
